--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <h1>Grunt demo project</h1>
         <p>This is a demo setup to show and illustrate the basic workings of <a href="http://gruntjs.com">Grunt.</a></p>
 
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="jsmin/grunt-demo.js"></script>
     </body>
 </html>
