update docco export, add readme

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <body>
         <h1>Grunt demo project</h1>
         <p>This is a demo setup to show and illustrate the basic workings of <a href="http://gruntjs.com">Grunt.</a></p>
+        <p>There's a complementary blogpost on <a href="http://knife.io">Knife.io</a></p>
 
         <script src="jsmin/grunt-demo.js"></script>
     </body>
