also concat css

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
         <title>Grunt demo project</title>
         <meta name="description" content="Grunt demo project">
         <meta name="viewport" content="width=device-width">
-
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/another-file.css">
+        <link rel="stylesheet" href="cssmin/all.min.css">
     </head>
     <body>
         <h1>Grunt demo project</h1>
