add screenshot, update link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <body>
         <h1>Grunt demo project</h1>
         <p>This is a demo setup to show and illustrate the basic workings of <a href="http://gruntjs.com">Grunt.</a></p>
-        <p>There's a complementary blogpost on <a href="http://knife.io">Knife.io</a></p>
+        <p>There's a complementary blogpost on <a href="http://knife.io/post/13-03-2013-learning-grunt-first-steps/">Knife.io</a></p>
+
+        <img src="screenshot.png" alt="grunt command in terminal" />
 
         <script src="jsmin/grunt-demo.min.js"></script>
     </body>
